ros2_ws/log/build_2025-06-19_09-36-03/path_executor/stderr.log
  File "/home/tedee/swarm/ros2_ws/install/path_executor/lib/python3.10/site-packages/path_executor/path_executor_node.py", line 189
    baiklah tolong bantu tuliskan langsung versi modifikasi dari PathExecutorNode sesuai konsep ini secara penuh
            ^^^^^^
SyntaxError: invalid syntax

